[metadata]
name = blm
version = 0.1
url = https://github.com/famura/blm
author = Fabio Muratore
author_email = fabio.muratore@famura.net
classifiers = 
	Development Status :: 4 - Beta
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3 :: Only
description = A simple model to describe the backlash effect in physics simulations
keywords = backlash, simulation, physics, modeling

[options]
zip_safe = True
packages = find:
python_requires = >=3.7, <4
install_requires = 
	numpy
	tabulate
	tqdm

[options.extras_require]
dev = black; isort; matplotlib; pytest; pytest-cov
